Restructured help page into table to allow bottom elements to anchor to bottom and shift vertically when browser is resized. Resolves #1257

--- a/media/css/style-ie7.css
+++ b/media/css/style-ie7.css
@@ -125,6 +125,5 @@ p.admin-links {
 }
 
 #help-overview-link {
-   margin-top: 170px;
    width: 200px;
 }
